testsuite/tests/saks/should_fail/saks_fail011.stderr

saks_fail011.hs:9:1: error:
    • Expected a type, but found something with kind ‘* -> *’
    • In the data type declaration for ‘G’
